# morse_ros

./: CMakeLists.txt  Dockerfile  README.md  package.xml
data/morse_scripts/: tum_kitchen_scenario.py
launch/: laas_adream.launch  laas_adream_locate.launch  map+nav.launch  nav.launch  pr2.launch  pr2_human_laas_adream.launch  pr2_human_tum_kitchen.launch  pr2_laas_adream_loacate_nav.launch  pr2_laas_adream_locate.launch  pr2_laas_adream_map_nav.launch  robot.launch  robot_wo_morse.launch  tum_kitchen_locate.launch
morse_config/blender_files/: laas_adream.blend
morse_config/maps/: adream_full.yaml  adream_half.yaml  laas_adream_map_full.yaml  laas_adream_map_half.yaml  tum_kitchen_map.yaml
morse_config/morse_scripts/: laas_adream_scenario.py  pr2_laas_adream_scenario.py  read_human_position.py  tum_kitchen_scenario.py
morse_ros/blender_files/: laas_adream.blend
morse_ros/launch/: fakerobot_scenario.launch  frames.gv  human_laas_adream.launch  human_scenario.launch  laas_adream.launch  pr2.launch  pr2_human_laas_adream.launch  pr2_human_scenario.launch  pr2_human_tum_kitchen.launch  pr2_laas_adream.launch  pr2_scenario.launch  pr2_scenario_play.launch  pr2_tuck_arms.launch  pr2_tum_kitchen.launch  scenario.launch  tum_kitchen.launch
morse_ros/scenarios/: fakerobot_laas_adream_scenario.py  human_laas_adream_scenario.py  human_tum_kitchen_scenario.py  laas_adream_scenario.py  pr2_human_laas_adream_scenario.py  pr2_human_laas_adream_scenario_play.py  pr2_human_tum_kitchen_scenario.py  pr2_laas_adream_scenario.py  pr2_tum_kitchen_scenario.py  tum_kitchen_scenario.py
morse_ros/scripts/: start_morse.sh
move_base_config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base.xml
navigation_morse/: CMakeLists.txt  package.xml
navigation_morse/launch/: custom_rosconsole.conf  fakerobot_locate.launch  laas_adream_locate.launch  locate.launch  map.launch  pr2_human_laas_adream_locate.launch  pr2_human_laas_adream_locate_nav.launch  pr2_human_locate.launch  pr2_human_locate_nav.launch  pr2_human_tum_kitchen_locate.launch  pr2_laas_adream_locate.launch  pr2_laas_adream_locate_nav.launch  pr2_laas_adream_map_nav.launch  pr2_locate.launch  pr2_locate_nav.launch  pr2_map.launch  pr2_map_nav.launch  pr2_nav.launch  pr2_nav_no_layer.launch  pr2_tum_kitchen_locate.launch  tum_kitchen_locate.launch
navigation_morse/launch/layer_config/: move_base.yaml
navigation_morse/layer_config/: dwa.yaml  global.yaml  local.yaml
navigation_morse/maps/: adream_appart.yaml  laas_adream.pgm  laas_adream_bottleneck.pgm  laas_adream_bottleneck.yaml  laas_adream_clean.pgm  laas_adream_clean.yaml  laas_adream_deadend.pgm  laas_adream_deadend.yaml  laas_adream_homotopy.pgm  laas_adream_homotopy.yaml  laas_adream_thin.pgm  laas_adream_thin.yaml  laas_adream_thinner.pgm  laas_adream_thinner.yaml  tum_kitchen.yaml
navigation_morse/move_base_config/: amcl_node.xml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml
navigation_morse/rviz/: morse.rviz
scenarios/: laas_adream_scenario.py  pr2_human_laas_adream_scenario.py  pr2_human_tum_kitchen_scenario.py  pr2_laas_adream_scenario.py
scripts/: start_morse.sh
urdf/: readme
