<?xml version="1.0"?>
<package>
  <name>morse_ros</name>
  <version>0.1.1</version>
  <description>The morse_ros package provides a simple script used to demo navigation in the MORSE
  simulator based on morse_2dnav example from morse website</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/morse_ros</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <!-- todo: depend on morse? -->

</package>
